@@ -37,14 +37,18 @@ public class Tripeaks extends Solitaire{
 	Deck allCards;
 
     private TriangleLayout layout;
+    private Stack<TripeaksMove> pastMoves;
 
+    //Runs the game of Tripeaks from scratch (no save file)
+    //starts timer at 0;
+    //Has no parameters
 	public Tripeaks(){
         super();
         setupUI();
         pastMoves = new Stack<>();
         showPeakSelectionDialog();
         showPeakHeightSelectionDialog();
-
+        start = Instant.now();
         initializeGameBoard();
         createStockDiscard();
         revalidate();
@@ -52,6 +56,8 @@ public class Tripeaks extends Solitaire{
 
     }
 
+    //Runs the game Tripeaks from a save file
+    //Takes in a String object as the file name
     public Tripeaks(String saveFile){
         super();
         setupUI();
@@ -69,6 +75,8 @@ public class Tripeaks extends Solitaire{
         repaint();
     }
 
+    //Creates the panel and sets it up for the game
+    //Has no parameters or returns
     public void setupUI(){
         mainPanel = new JPanel(new BorderLayout());
         super.add(mainPanel, BorderLayout.CENTER);
@@ -89,10 +97,14 @@ public class Tripeaks extends Solitaire{
         utilPanel.setOpaque(false);
         mainPanel.add(utilPanel, BorderLayout.SOUTH);
     }
+
+    //Performs an undo of the last move performed as well as handling the visuals.
+    //Can be performed until there are no more past moves
+    //No parameters or returns
     @Override
     protected void undoLastMove() {
         if(!pastMoves.isEmpty()) {
-            TripeaksMove move = (TripeaksMove) pastMoves.getLast();
+            TripeaksMove move = pastMoves.getLast();
             if(move.stockMove) {
                 discardPile.removeLast();
                 stockPile.add(move.top);
@@ -122,10 +134,13 @@ public class Tripeaks extends Solitaire{
         }
     }
 
+    //Performs making a new game without a safe file
+    //No parameters or returns
     @Override
     protected void newGame() {
         showPeakSelectionDialog();
         showPeakHeightSelectionDialog();
+        start = Instant.now();
         cardsPanel.removeAll();
         utilPanel.removeAll();
         revalidate();
@@ -134,26 +149,11 @@ public class Tripeaks extends Solitaire{
         createStockDiscard();
     }
 
-    private Dimension computeCardSize(int frameW, int frameH){
-        double ratio = JCard.getRatio();
-        // Width-based constraint
-        int cardW_byWidth = Math.max(40, frameW / (numPeaks * peakHeight * 2));
-        double cardH_byWidth = cardW_byWidth * ratio;
-
-        // Height-based constraint assuming up to 80% overlap (20% visible)
-        // Max height of pyramid with overlapFraction = 0.8:
-        // H = cardH * (0.8 + 0.2 * peakHeight)
-        double denom = 0.8 + 0.2 * peakHeight;
-        if (denom <= 0) denom = 1; // safety
-        double cardH_maxByHeight = frameH / denom;
-        double cardW_byHeight = cardH_maxByHeight / ratio;
-
-        int cardW = (int) Math.max(40, Math.min(cardW_byWidth, cardW_byHeight));
-        int cardH = (int) (cardW * ratio);
-
-        return new Dimension(cardW, cardH);
-    }
-
+    //Logic for how the game will be set up based on user selection
+    //No paramters but relyes on numPeaks, peakHeight and cardsPanel
+    //Calculates the number of decks needed to run the game
+    //Applys layout for the game board and adds cards to the board
+    //All cards on board are added a mouseListener
     private void initializeGameBoard(){
         layout = new TriangleLayout(numPeaks, peakHeight, cardsPanel);
 
@@ -169,7 +169,6 @@ public class Tripeaks extends Solitaire{
         for(int i = 0; i < cardsNeeded; i++){
             Card card = allCards.pop();
             CardNode node = new CardNode(card);
-           // node.setFaceUp(i>=cardsNeeded - numPeaks*peakHeight);
 
             allNodes.add(node);
         }
@@ -180,17 +179,15 @@ public class Tripeaks extends Solitaire{
             node.setFaceUp(node.isUncovered());
         }
 
-        for (int i = 0 ; i <allNodes.size(); i++) {
-            CardNode node = allNodes.get(i);
-
+        for (CardNode node : allNodes) {
             JCard jc = new JCard(node.getCard());
             jc.setFaceDown(!node.isFaceUp());
             jc.setBounds(node.getX(), node.getY(), node.getWidth(), node.getHeight());
             cardsPanel.add(jc, 0);
             jcards.add(jc);
-            jc.addMouseListener(new MouseAdapter(){
+            jc.addMouseListener(new MouseAdapter() {
                 @Override
-                public void mouseClicked(MouseEvent e){
+                public void mouseClicked(MouseEvent e) {
                     playCard(jc);
                 }
             });
@@ -198,6 +195,8 @@ public class Tripeaks extends Solitaire{
         }
     }
 
+    //Creates the stock and discard piles and adds a mouseListener to the top of the stock pile (a JCard)
+    //takes no parameters nor has returns
     private void createStockDiscard(){
         if(topStockCard != null) utilPanel.remove(topStockCard);
         if(topDiscardCard != null) utilPanel.remove(topDiscardCard);
@@ -236,6 +235,9 @@ public class Tripeaks extends Solitaire{
 
     }
 
+    //Function to handle the clicks of the stock pile.
+    //Grabs the next card in the stock pile, places it in JCard topStockCard and moves the card in topStockCard to the topDiscardCard
+    //Handles rotation of cards and checks if the game has ended every time it's performed
     private void handleStockClick(){
         if(stockPile.isEmpty()){
             return;
@@ -261,18 +263,19 @@ public class Tripeaks extends Solitaire{
         positionStockDiscardPiles();
         repaint();
 
+        checkGameOver();
+
     }
 
+    //Handles calculating the location of the stock and discard piles
+    //Takes no parameters
     private void positionStockDiscardPiles(){
         if(topStockCard == null || topDiscardCard == null) return;
         if(jcards == null || jcards.isEmpty()) return;
 
-        JCard s = jcards.get(0);
+        JCard s = jcards.getFirst();
         int w = s.getWidth();
         int cardH = s.getHeight();
-        int peakAreaH = (int) (mainPanel.getHeight() * (1.0-STOCK_AREA_RATIO));
-        int y = peakAreaH + 20;
-        //int y = mainPanel.getHeight() - cardH - 20;
 
         int midX = mainPanel.getWidth()/2;
         int spacing = (int)(w*1.2);
@@ -282,10 +285,11 @@ public class Tripeaks extends Solitaire{
         topStockCard.setBounds(stockX, 0, w, cardH);
         topDiscardCard.setBounds(discardX, 0, w, cardH);
 
-
-
     }
 
+    //Generates pop menu to ask the user how many peaks they'd like to see in their game
+    //More peak options can be added if desired
+    //No parameters but sets the value stored in numPeaks
     private void showPeakSelectionDialog(){
         String[] options = {"2 Peaks", "3 Peaks", "4 Peaks", "5 Peaks", };
 
@@ -297,6 +301,9 @@ public class Tripeaks extends Solitaire{
         numPeaks = Integer.parseInt(choice.substring(0,1));
     }
 
+    //Generates pop menu to ask the user how many cards they'd like to see per level in the game
+    //More level options can be added if desired
+    //No parameters but sets the value stored in peakHeight
     private void showPeakHeightSelectionDialog(){
         String[] options = {"3 Cards", "4 Cards", "5 Cards", "6 Cards", "7 Cards", "8 Cards"};
 
@@ -307,6 +314,7 @@ public class Tripeaks extends Solitaire{
         peakHeight = Integer.parseInt(choice.substring(0,1));
     }
 
+    //Function to resize the panel
     @Override
     public void doLayout() {
         super.doLayout();
@@ -323,23 +331,27 @@ public class Tripeaks extends Solitaire{
         }
 
         positionStockDiscardPiles();
-
         revalidate();
         repaint();
     }
 
+    //Checks if it is a valid move or not
+    //Parameter card is the card on the board selected
+    //Parameter top is the card at the top of the discard pile
+    //returns true if it is a valid move, false if it isn't
+    //Handles King's and Ace's directly
     private boolean isValidMove(Card card, Card top){
         int r1 = card.getRankValue();
         int r2 = top.getRankValue();
 
         if(Math.abs(r1 - r2) == 1) return true;
 
-        if((r1 == 13 && r2 == 1) || (r1 == 1 && r2 == 13)) return true;
-
-        return false;
+        return (r1 == 13 && r2 == 1) || (r1 == 1 && r2 == 13);
 
     }
 
+    //Checks if the game has been won if all the cards on the board have been removed
+    //Returns true if all the cards have been removed, false otherwise
     private boolean checkWin(){
         for(CardNode n : allNodes){
             if(!n.isRemoved()) return false;
@@ -347,6 +359,11 @@ public class Tripeaks extends Solitaire{
         return true;
     }
 
+    //Handles the actions of a card being selected and "played"
+    //Uncovers the required cards if there are any and makes them selectable
+    //Updates the top of the discard pile as needed and handles the ui updates as well
+    //Parameter JCard jc is the card that was clicked
+    //Checks if the game is over
     private void playCard(JCard jc){
         Utils.plopAudio.stop();
         if(Utils.plopAudio.isOpen()) Utils.plopAudio.setFramePosition(15000);
@@ -360,7 +377,7 @@ public class Tripeaks extends Solitaire{
 
         if(!n.isUncovered()) return;
 
-        Card topDiscard = discardPile.get(discardPile.size() - 1);
+        Card topDiscard = discardPile.getLast();
         if(!isValidMove(n.card, topDiscard)) return;
 
         pastMoves.push(new TripeaksMove(n, topDiscard));
@@ -369,28 +386,66 @@ public class Tripeaks extends Solitaire{
 
         discardPile.add(n.card);
         topDiscardCard.setCard(n.card);
-        if(n.getLeftBeneath() != null && n.getLeftBeneath().isUncovered()) {
-            CardNode left = n.getLeftBeneath();
-            ((TripeaksMove)pastMoves.peek()).leftFlip = n.getLeftBeneath();
-            left.setFaceUp(true);
-            jcards.get(allNodes.indexOf(left)).setFaceDown(false);
+        for(int i = 0; i < allNodes.size(); i++){
+            CardNode c = allNodes.get(i);
+            if(c.getLeftCover() == n || c.getRightCover() == n){
+                if(!c.isRemoved() && !c.isFaceUp() && c.isUncovered()){
+                    if(c.getLeftCover() == n) pastMoves.peek().leftFlip = c;
+                    else pastMoves.peek().rightFlip = c;
+                    c.setFaceUp(true);
+                    jcards.get(i).setFaceDown(false);
+                }
+             }
         }
-        if(n.getRightBeneath() != null && n.getRightBeneath().isUncovered()) {
-            CardNode right = n.getRightBeneath();
-            ((TripeaksMove)pastMoves.peek()).leftFlip = n.getLeftBeneath();
-            right.setFaceUp(true);
-            jcards.get(allNodes.indexOf(right)).setFaceDown(false);
-        }
+
         revalidate();
         repaint();
 
+        checkGameOver();
+
     }
 
+    //Pop up that shows the specific game dialog
+    //Takes no paramters and checks if the game has been won internally
+    //Then provides the user with an option of starting a new game, going back to the meny or exiting and handles the choice made
+    private void showEndGameDialog(){
+        boolean w = checkWin();
+        String title = w ? "You Won!" : "Game Over";
+        String message = w? "Congratulations! You cleared all the cards. \nWhat would you like to do?" : "No more moves. \nWhat would you like to do?";
+
+        String[] options = {"Replay", "Home", "Exit"};
+
+        int choice = JOptionPane.showOptionDialog(this,message, title, JOptionPane.DEFAULT_OPTION, JOptionPane.INFORMATION_MESSAGE, null, options, options[0]);
+
+        if(choice == 0){
+            replayGame();
+        } else if (choice == 1){
+            switchToMainMenu();
+        }else if (choice == 2){
+            System.exit(0);
+        }
+    }
+
+    //Reinitializes the baord so that a new game can be played
+    //No paramters or returns
+    @Override
+    protected void replayGame(){
+        cardsPanel.removeAll();
+        utilPanel.removeAll();
+        revalidate();
+        repaint();
+        initializeGameBoard();
+        createStockDiscard();
+    }
+
+
+    //Creates the save for the game
     @Override
     public GameSave makeSave() {
-        return new TripeaksSave(numPeaks, peakHeight, Duration.between(start, Instant.now()).getSeconds(), allNodes, stockPile, discardPile, pastMoves);
+        return new TripeaksSave(numPeaks, peakHeight, allNodes, stockPile, discardPile, pastMoves);
     }
 
+    //Loads a save file and sets up the board, stats and adds them to the panel
     @Override
     public void loadSave(GameSave save) {
         cardsPanel.removeAll();
@@ -400,21 +455,18 @@ public class Tripeaks extends Solitaire{
         peakHeight = saveData.peakHeight;
         layout = new TriangleLayout(numPeaks, peakHeight, cardsPanel);
         allNodes = saveData.allNodes;
-        pastMoves = new Stack<>();
-        pastMoves.addAll(saveData.pastMoves);
+        pastMoves = saveData.pastMoves;
         jcards.clear();
         layout.applyLayout(allNodes);
-        for (int i = 0 ; i <allNodes.size(); i++) {
-            CardNode node = allNodes.get(i);
-
+        for (CardNode node : allNodes) {
             JCard jc = new JCard(node.getCard());
             jc.setFaceDown(!node.isFaceUp());
             jc.setBounds(node.getX(), node.getY(), node.getWidth(), node.getHeight());
-            if(!node.isRemoved()) cardsPanel.add(jc, 0);
+            if (!node.isRemoved()) cardsPanel.add(jc, 0);
             jcards.add(jc);
-            jc.addMouseListener(new MouseAdapter(){
+            jc.addMouseListener(new MouseAdapter() {
                 @Override
-                public void mouseClicked(MouseEvent e){
+                public void mouseClicked(MouseEvent e) {
                     playCard(jc);
                 }
             });
@@ -439,11 +491,40 @@ public class Tripeaks extends Solitaire{
         });
         topDiscardCard.setCard(discardPile.getLast());
         utilPanel.add(topDiscardCard);
-        start = Instant.now().minusSeconds(saveData.timePast);
     }
 
+    //Checks if there are any playable moves left
+    //First checks if the discardPile is empty. If it is, it returns false, if it isn't it returns true
+    // checks the top of the discard pile to determine if there are any playable moves
+    //If there are no more moves then it returns false, if there are playable moves it returns true
+    private boolean hasAnyPlayableMove(){
+        if(discardPile.isEmpty()) return false;
+        Card top = discardPile.getLast();
+        for(CardNode n : allNodes){
+            if(!n.isRemoved() && n.isFaceUp() && n.isUncovered()){
+                if (isValidMove(n.card, top)) {
+
+                    return true;
+                }
+            }
+        }
+        return false;
+    }
+
+    //First checks if the game has been won and shows the end game dialog
+    // Then checks if the game is over by checking if the stockPile is empty and if there are any playable moves and
+    private void checkGameOver(){
+        if(checkWin()){
+            showEndGameDialog();
+            return;
+        }
+        if(stockPile.isEmpty() && !hasAnyPlayableMove()){
+            showEndGameDialog();
+        }
+    }
 }
 
+//Serializes the game, used for game saves
 class TripeaksSave extends GameSave implements Serializable {
     int numPeaks;
     int peakHeight;
@@ -451,20 +532,18 @@ class TripeaksSave extends GameSave implements Serializable {
     List<Card> stockPile;
     List<Card> discardPile;
     Stack<TripeaksMove> pastMoves;
-    public TripeaksSave(int np, int ph, long seconds, List<CardNode> nodes, List<Card> stock, List<Card> discard, Stack<GameMove> moves){
+    public TripeaksSave(int np, int ph, List<CardNode> nodes, List<Card> stock, List<Card> discard, Stack<TripeaksMove> moves){
         numPeaks = np;
         peakHeight = ph;
-        timePast = seconds;
         allNodes = nodes;
         stockPile = stock;
         discardPile = discard;
-        pastMoves = new Stack<>();
-        for(GameMove m:moves){
-            pastMoves.push((TripeaksMove) m);
-        }
+        pastMoves = moves;
     }
 }
-class TripeaksMove extends GameMove implements Serializable{
+
+//Makes a move in tripeaks serializable to be able to be stored in a file
+class TripeaksMove implements Serializable{
     boolean stockMove;
     CardNode card;
     Card top;
